Impl UpdateUserIcon
